--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <h2>Enter Grid Size</h2>
     <form id="sizePicker">
         <strong>Grid Height:</strong>    
-        <input type="number" id="input_height" name="height" min="1" max="1000" placeholder="1 - 1000">
+        <input type="number" id="input_height" name="height" min="1" max="50" placeholder="1 - 50">
         <strong>Grid Width:</strong>
-        <input type="number" id="input_width" name="width" min="1" max="50" placeholder="1 - 100">
+        <input type="number" id="input_width" name="width" min="1" max="50" placeholder="1 - 50">
 
-<div id="butt" style="padding-top: 2%;"">
+<div id="butt" style="padding-top: 2%;">
        <button type="button" id ="cv_submit" class="btn btn-default">Generate Grid</button>
         <button type="button" id="gridReset"class="btn btn-default">Decolor</button>
         <button type="button" class="btn btn-default"><a href="#"><span class="glyphicon glyphicon-question-sign"></span> Help </button></a>
